# HurricaneFPGA

./: Cargo.toml  Dockerfile  README.md  flash_fpga.py  requirements.txt  tmp.py
.github/: dependabot.yml
.github/workflows/: build_and_test.yml  jekyll-gh-pages.yml
HDL/: architecture.md  transparent_proxy_implementation.md
HDL/hardware/constraints/: cynthion_pins.lpf
HDL/hardware/rtl/: top.v
HDL/hardware/rtl/usb_interface/: crc5_crc16.v  line_state_monitor.v  usb_phy_wrapper.v  usb_protocol_handler.v  usb_rx_fsm.v  usb_tx_fsm.v
HDL/hardware/rtl/usb_proxy/: bram_dual_port.v  buffer_manager.v  debug_interface.v  packet_proxy.v  timestamp_generator.v  usb_monitor.v
HDL/tools/: compile_bitstream.sh  cynthion_debugger.py  flash_cynthion.sh  validate_hdl.sh
legacy/src/: flash_fpga.py
legacy/src/backend/: interfaces.py  top.py  usb_serial.py
src/: README.md  main.rs  version.rs
src/backend/: __init__.py  advertiser.py  fifo.py  interfaces.py  mouse_injector.py  mouse_streamer.py  passthrough.py  top.py  uart.py  ulpi_core.py  usb_serial.py  utils.py
src/backend_simple/: top.py
